--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="247dp"
         android:gravity="center"
         android:text="Splash\n
-Simple Weather"
+Hello World"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="40sp"/>
 </RelativeLayout>
