--- a/map/src/main/res/layout/activity_map.xml
+++ b/map/src/main/res/layout/activity_map.xml
@@ -64,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="3dp"
+                android:scrollbarAlwaysDrawVerticalTrack="true"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
