--- a/av/src/main/res/layout/activity_video.xml
+++ b/av/src/main/res/layout/activity_video.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#0099cc"
-             tools:context="com.hawksjamesf.uicomponent.VideoActivity">
+             tools:context="com.hawksjamesf.uicomponent.com.hawksjamesf.av.VideoActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
