[refactor] mv network api to login and myhome

--- a/framework/uicomponent/carousel/main/res/layout/activity_viewpager.xml
+++ b/framework/uicomponent/carousel/main/res/layout/activity_viewpager.xml
@@ -53,12 +53,12 @@
             app:cv_interval="5000"
             />
 
-        <com.hawksjamesf.uicomponent.widget.ChaplinVideoView
-            android:id="@+id/clv"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:layout_gravity="center"
-            />
+<!--        <com.hawksjamesf.uicomponent.widget.ChaplinVideoView-->
+<!--            android:id="@+id/clv"-->
+<!--            android:layout_width="300dp"-->
+<!--            android:layout_height="300dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            />-->
 
 
         <VideoView
