[feat] clean code

--- a/framework/av/src/main/res/layout/activity_video.xml
+++ b/framework/av/src/main/res/layout/activity_video.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#0099cc"
-             tools:context="com.hawksjamesf.uicomponent.com.hawksjamesf.av.VideoActivity">
+    >
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -25,18 +25,18 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
+<!--            style="?metaButtonBarStyle"-->
         <LinearLayout
             android:id="@+id/fullscreen_content_controls"
-            style="?metaButtonBarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:orientation="horizontal"
             tools:ignore="UselessParent">
 
+<!--                style="?metaButtonBarButtonStyle"-->
             <Button
                 android:id="@+id/dummy_button"
-                style="?metaButtonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
