--- a/framework/av/src/main/res/layout/view_chaplin.xml
+++ b/framework/av/src/main/res/layout/view_chaplin.xml
@@ -17,7 +17,8 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/apricot"/>
+            />
+<!--            android:background="@color/apricot"-->
 
         <TextureView
             android:id="@+id/tv_texture"
