--- a/framework/av/src/main/res/layout/view_chaplin_test.xml
+++ b/framework/av/src/main/res/layout/view_chaplin_test.xml
@@ -31,7 +31,8 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/apricot"/>
+            />
+<!--            android:background="@color/apricot"-->
 
         <LinearLayout
             android:layout_width="match_parent"
