--- a/components/myhome/src/main/res/layout/activity_setup_wizard.xml
+++ b/components/myhome/src/main/res/layout/activity_setup_wizard.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hawksjamesf.myhome.ui.SetupWizardActivity">
+    tools:context="com.hawksjamesf.myhome.SetupWizardActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
