--- a/components/myhome/src/main/res/layout/content_setup_wizard.xml
+++ b/components/myhome/src/main/res/layout/content_setup_wizard.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.hawksjamesf.myhome.ui.SetupWizardActivity"
+    tools:context="com.hawksjamesf.myhome.SetupWizardActivity"
     tools:showIn="@layout/activity_setup_wizard"
     >
 
