--- a/framework/uicomponent/customview/main/res/layout/activity_coordinatorlayout.xml
+++ b/framework/uicomponent/customview/main/res/layout/activity_coordinatorlayout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".newLayoutExprimental.CoordinatorLayoutActivity">
+    tools:context="com.hawksjamesf.myhome.widget.newLayoutExprimental.CoordinatorLayoutActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/abl"
@@ -18,7 +18,7 @@
         app:liftOnScroll="true"
         tools:expanded="false">
 
-        <com.hawksjamesf.uicomponent.newLayoutExprimental.coordinator.CollapsingBarsLayout
+        <com.hawksjamesf.myhome.widget.newLayoutExprimental.coordinator.CollapsingBarsLayout
             android:id="@+id/ctbl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -57,7 +57,7 @@
                 app:title="title" />
 
 
-        </com.hawksjamesf.uicomponent.newLayoutExprimental.coordinator.CollapsingBarsLayout>
+        </com.hawksjamesf.myhome.widget.newLayoutExprimental.coordinator.CollapsingBarsLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
