--- a/framework/uicomponent/customview/main/res/layout/activity_scrollable.xml
+++ b/framework/uicomponent/customview/main/res/layout/activity_scrollable.xml
@@ -69,7 +69,7 @@
         </LinearLayout>
     </HorizontalScrollView>
 
-    <com.jamesfchen.myhome.widget.scrollExprimental.HScrollView
+    <com.jamesfchen.uicomponent.scrollExprimental.HScrollView
         android:layout_width="match_parent"
         android:layout_height="200dp">
 
@@ -131,7 +131,7 @@
                 app:iconTint="@color/apricot"
                 app:rippleColor="@color/apricot" />
         </LinearLayout>
-    </com.jamesfchen.myhome.widget.scrollExprimental.HScrollView>
+    </com.jamesfchen.uicomponent.scrollExprimental.HScrollView>
 
 
 </LinearLayout>
