--- a/framework/uicomponent/drawable/main/res/drawable/animationlist.xml
+++ b/framework/uicomponent/drawable/main/res/drawable/animationlist.xml
@@ -5,21 +5,21 @@
                 android:id="@+id/selected"
                 android:oneshot="false">
     <item
-        android:drawable="@drawable/w0"
+        android:drawable="@drawable/tmp"
         android:duration="50"/>
     <item
-        android:drawable="@drawable/w1"
+        android:drawable="@drawable/tmp"
         android:duration="50"/>
     <item
-        android:drawable="@drawable/w2"
+        android:drawable="@drawable/tmp"
         android:duration="50"/>
     <item
-        android:drawable="@drawable/w3"
+        android:drawable="@drawable/tmp"
         android:duration="50"/>
     <item
-        android:drawable="@drawable/w4"
+        android:drawable="@drawable/tmp"
         android:duration="50"/>
     <item
-        android:drawable="@drawable/w5"
+        android:drawable="@drawable/tmp"
         android:duration="50"/>
 </animation-list>
