--- a/framework/uicomponent/drawable/main/res/drawable/clip.xml
+++ b/framework/uicomponent/drawable/main/res/drawable/clip.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <clip xmlns:android="http://schemas.android.com/apk/res/android"
-      android:drawable="@drawable/w14" >
+      android:drawable="@drawable/tmp" >
 </clip>
