--- a/framework/uicomponent/drawable/main/res/drawable/levellist.xml
+++ b/framework/uicomponent/drawable/main/res/drawable/levellist.xml
@@ -2,7 +2,7 @@
 <level-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@drawable/w14"
+        android:drawable="@drawable/tmp"
         android:maxLevel="2"/>
 
     <item
