--- a/components/hotel-module/bundle1/src/main/res/values/themes.xml
+++ b/components/hotel-module/bundle1/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources>
 
-    <style name="Theme.SpacecraftAndroid.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
+<!--    <style name="Theme.SpacecraftAndroid.NoActionBar">-->
+<!--        <item name="windowActionBar">false</item>-->
+<!--        <item name="windowNoTitle">true</item>-->
+<!--    </style>-->
 
     <style name="Theme.SpacecraftAndroid.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
