--- a/components/hotel-module/foundation/src/main/res/values/themes.xml
+++ b/components/hotel-module/foundation/src/main/res/values/themes.xml
@@ -13,4 +13,12 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.SpacecraftAndroid.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.SpacecraftAndroid.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.SpacecraftAndroid.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
