--- a/components/home-module/myhome/src/main/res/layout/activity_home.xml
+++ b/components/home-module/myhome/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    tools:context="com.jamesfchen.myhome.ui.home.HomeActivity"
+    tools:context=".screen.home.HomeActivity"
     android:orientation="horizontal">
 
     <LinearLayout
