--- a/components/home-module/myhome/src/main/res/layout/activity_main.xml
+++ b/components/home-module/myhome/src/main/res/layout/activity_main.xml
@@ -1,78 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
-        app:title="title"
-        app:subtitle="subtitle"
-        app:logo="@mipmap/ic_launcher"
-        android:id="@+id/tb"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_nav_host"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
-        />
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@id/bnv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/nav_graph" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/container"
+    <!--<androidx.constraintlayout.widget.Guideline-->
+    <!--android:id="@+id/guideline"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:orientation="horizontal"-->
+    <!--app:layout_constraintGuide_percent="0.5"/>-->
+
+    <!--<androidx.constraintlayout.widget.Barrier-->
+    <!--android:id="@+id/barrier"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--app:barrierDirection="end"-->
+    <!--app:constraint_referenced_ids="message,message"/>-->
+
+    <!--<androidx.constraintlayout.widget.Group-->
+
+    <!--<androidx.constraintlayout.widget.Placeholder-->
+
+    <!--<androidx.constraintlayout.widget.Constraints-->
+
+    <!--<androidx.constraintlayout.widget.ConstraintHelper-->
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        style="@style/Widget.MaterialComponents.BottomNavigationView"
+        android:id="@+id/bnv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background"
-        tools:context="com.jamesfchen.myhome.MainActivity">
+        android:layout_height="60dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_nav_host"
+        app:menu="@menu/nav_main_activity" />
+    <!--android:background="?android:attr/windowBackground"-->
+    <!--app:itemIconTint="@color/bottom_navigation_colors"-->
+    <!--app:itemTextColor="@color/bottom_navigation_colors"-->
 
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="hello world"/>
-
-        <!--<androidx.constraintlayout.widget.Guideline-->
-        <!--android:id="@+id/guideline"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal"-->
-        <!--app:layout_constraintGuide_percent="0.5"/>-->
-
-        <!--<androidx.constraintlayout.widget.Barrier-->
-        <!--android:id="@+id/barrier"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--app:barrierDirection="end"-->
-        <!--app:constraint_referenced_ids="message,message"/>-->
-
-        <!--<androidx.constraintlayout.widget.Group-->
-
-        <!--<androidx.constraintlayout.widget.Placeholder-->
-
-        <!--<androidx.constraintlayout.widget.Constraints-->
-
-        <!--<androidx.constraintlayout.widget.ConstraintHelper-->
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bnv"
-            style="@style/Widget.MaterialComponents.BottomNavigationView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/navigation"/>
-        <!--android:background="?android:attr/windowBackground"-->
-        <!--app:itemIconTint="@color/bottom_navigation_colors"-->
-        <!--app:itemTextColor="@color/bottom_navigation_colors"-->
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
