--- a/components/home-module/myhome/src/main/res/values/themes.xml
+++ b/components/home-module/myhome/src/main/res/values/themes.xml
@@ -1,2 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="HomeAppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:forceDarkAllowed">true</item>
+    </style>
+    <!--=====================PhotoTheme screen========================================-->
+    <style name="PhotoTheme" parent="AppTheme">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+    <!--=====================PhotoTheme screen========================================-->
 </resources>
