--- a/framework/uicomponent/src/main/res/values-v19/themes.xml
+++ b/framework/uicomponent/src/main/res/values-v19/themes.xml
@@ -8,7 +8,7 @@
 
     </style>
 
-    <style name="HomeTheme" parent="AppTheme.BarsTransparent">
-        <item name="android:windowTranslucentNavigation">false</item>
-    </style>
+<!--    <style name="HomeTheme" parent="AppTheme.BarsTransparent">-->
+<!--        <item name="android:windowTranslucentNavigation">false</item>-->
+<!--    </style>-->
 </resources>
