--- a/components/home-module/myhome/src/main/res/values/themes.xml
+++ b/components/home-module/myhome/src/main/res/values/themes.xml
@@ -1,6 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="HomeAppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:forceDarkAllowed">true</item>
+    <style name="HomeTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
     </style>
     <!--=====================PhotoTheme screen========================================-->
     <style name="PhotoTheme" parent="AppTheme">
