--- a/framework/uicomponent/src/main/res/values-v21/themes.xml
+++ b/framework/uicomponent/src/main/res/values-v21/themes.xml
@@ -49,8 +49,8 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 
-    <style name="HomeTheme" parent="AppTheme.BarsTransparent">
-        <item name="android:navigationBarColor">@color/bottom_navigation_colors</item>
-    </style>
+<!--    <style name="HomeTheme" parent="AppTheme.BarsTransparent">-->
+<!--        <item name="android:navigationBarColor">@color/bottom_navigation_colors</item>-->
+<!--    </style>-->
 
 </resources>
